# imperial

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LOOP.md  README.md  STATE.md  _bootstrap.py  compose.yaml  loop-budget.md  loop-constraints.md  loop-run-log.md  pyproject.toml  pyrightconfig.json  review-council-updated-plan-2026-07-02-chunk-recall.md  skills-lock.json
.github/: pull_request_template.md
.imperial_rag/: manifest.sqlite3
docs/: code-review-2026-06-19.md  code-review-final-2026-06-19.md  council-report-2026-06-23.html  council-report-2026-06-25.html  council-report-20260625-011855.html  council-report-20260625-165944.html  council-report-20260625-170455.html  council-transcript-2026-06-23.md  council-transcript-2026-06-25.md  council-transcript-20260625-011855.md  council-transcript-20260625-165944.md  council-transcript-20260625-170455.md  database-schema-diagram.md  document-authority.json  rag-pipeline-schema.md  safety.md
evals/: questions.jsonl  russian_judge_calibration.jsonl
patterns/: registry.yaml
scripts/: _bootstrap.py  audit_eval_rows.py  check.sh  check_ingestion_promotion.py  deploy_server.sh  draft_eval_questions.py  generate_eval_evidence_packets.py  ingest.py  promote_ingestion.py  publish_agent_pr.sh  query.py  run_all_evals.py  run_judge_calibration.py  run_phoenix_eval.py  run_ragas_eval.py  setup_event_logs.py  start_elasticsearch.sh  start_qdrant.sh  summarize_pyright.py  validate_phoenix_trace.py
tasks/: prd-chess-study-app.md
tests/: test_agent_publish_script.py  test_all_evals.py  test_answering.py  test_auth.py  test_auth_cookie.py  test_chat_history.py  test_chunking.py  test_config.py  test_dependencies.py  test_deploy_server.py  test_document_ids.py  test_elasticsearch_keyword.py  test_elasticsearch_live.py  test_eval_audit.py  test_eval_corpus.py  test_eval_evidence_packets.py  test_eval_question_drafts.py  test_evals.py  test_extraction.py  test_indexing.py  test_ingestion_authority.py  test_ingestion_promotion.py  test_ingestion_shadow.py  test_jsonl.py  test_judge_calibration.py  test_keyword.py  test_manifest.py  test_manifest_store.py  test_module_structure.py  test_observability.py  test_pipeline.py  (+16 more)
(+162 files in other folders)
