[project]
name = "imperial-rag"
version = "0.1.0"
description = "Local/private RAG system for the Imperial document corpus"
requires-python = ">=3.12"
dependencies = [
  "dashscope",
  "elasticsearch>=8.19,<9",
  "langchain",
  "langchain-community",
  "langchain-core",
  "langchain-openai",
  "langchain-qdrant",
  "langchain-cohere",
  "langchain-qwq",
  "langchain-text-splitters",
  "langgraph",
  "arize-phoenix-client",
  "arize-phoenix-otel>=0.16.0",
  "openinference-instrumentation-langchain",
  "openinference-instrumentation-openai",
  "qdrant-client",
  "python-dotenv",
  "python-docx",
  "openpyxl",
  "pypdf",
  "pymupdf",
  "pillow",
  "striprtf",
  "streamlit",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ragas",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
