[project]
name = "imperial-rag"
version = "0.1.0"
description = "Local/private RAG system for the Imperial document corpus"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.13,<5",
  "dashscope>=1.25,<2",
  "elasticsearch>=8.19,<9",
  "langchain>=1.3,<2",
  "langchain-community>=0.4,<0.5",
  "langchain-core>=1.4,<2",
  "langchain-openai>=1.2,<2",
  "langchain-qdrant>=1.1,<2",
  "langchain-cohere>=0.6,<0.7",
  "langchain-elasticsearch>=1,<2",
  "langchain-qwq>=0.3,<0.4",
  "langchain-text-splitters>=1.1,<2",
  "langgraph>=1.2,<2",
  "arize-phoenix-client>=2.7,<3",
  "arize-phoenix-otel>=0.16.0",
  "openinference-instrumentation-langchain>=0.1.66,<0.2",
  "openinference-instrumentation-openai>=0.1.50,<0.2",
  "qdrant-client>=1.18,<2",
  "python-dotenv",
  "python-docx",
  "openpyxl",
  "pypdf",
  "pymupdf",
  "pillow",
  "striprtf",
  "streamlit>=1.58,<2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ragas>=0.4,<0.5",
  "ruff>=0.14,<0.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["F"]

[tool.coverage.run]
branch = true
source = ["imperial_rag"]

[tool.coverage.report]
skip_empty = true
